<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp">


        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageView_logo_Sign"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/irobot"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius="300dp"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="#ffffff"
            android:text="@string/text"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView_logo_Sign"
            app:layout_constraintStart_toStartOf="@+id/imageView_logo_Sign"
            app:layout_constraintTop_toBottomOf="@+id/imageView_logo_Sign" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputLayout_signIn_email"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="52dp"
                android:background="@drawable/bubble"
                android:hint="@string/email_address"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:textColor="#ffffff"
                android:textColorHint="#8effffff"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputLayout_signIn_password"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bubble"
        android:hint="@string/password"
        android:inputType="number"
        android:maxLength="8"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:textColor="#ffffff"
        android:textColorHint="#8effffff"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout_signIn_email"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout_signIn_email"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_signIn_email" />


    <TextView
            android:id="@+id/textView_forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forget_password"
        android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout_signIn_password"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout_signIn_password"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_signIn_password" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.FoldingCube"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:visibility="gone"
        app:SpinKit_Color="@color/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>