<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view4"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                android:background="#CACACA"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/view4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <View
                    android:id="@+id/item_txt_title"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="4dp"
                    android:background="#CACACA"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/title"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/item_txt_message"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="#CACACA"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="2"
                    android:padding="5dp"
                    android:text="@string/description"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <View
                    android:id="@+id/item_txt_price"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="#CACACA"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/price"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>